Pushing accumulated updates
Includes mongoDB update

 Changes to be committed:
	modified:   Bot.js
	modified:   config.json

--- a/config.json
+++ b/config.json
@@ -14,6 +14,13 @@
   "redditprefix": "?",
   "token": "",
   "redditinf": "",
+  "redditregexes": "",
+  "redditshadowbans": "",
+  "redditremovalnumber": 3,
+  "databaseName": "",
+  "dbUser":"",
+  "dbPass":"",
+  "modAlias": {},
   "blacklist": [],
   "agenda": []
 }
